force-app/main/default/objects/SF_SAP_DataSet__x/SF_SAP_DataSet__x.object-meta.xml
<CustomObject>
    <description>SF_SAP_DataSet</description>
    <externalDataSource>GSAP_Connect</externalDataSource>
    <externalName>SF_SAP_DataSet</externalName>
    <label>SF_SAP_DataSet</label>
    <pluralLabel>SF_SAP_DataSet</pluralLabel>
</CustomObject>