force-app/main/default/objects/SF_SAP_DataSet__x/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Action</description>
    <externalDeveloperName>Action</externalDeveloperName>
    <label>Action</label>
    <length>1</length>
    <type>Text</type>
</CustomField>