force-app/main/default/objects/SF_SAP_DataSet__x/fields/ChangeDateSap__c.field-meta.xml
<CustomField>
    <fullName>ChangeDateSap__c</fullName>
    <description>ChangeDateSap</description>
    <externalDeveloperName>ChangeDateSap</externalDeveloperName>
    <label>ChangeDateSap</label>
    <length>8</length>
    <type>Text</type>
</CustomField>