force-app/main/default/objects/SF_SAP_DataSet__x/fields/ChangeTimeSap__c.field-meta.xml
<CustomField>
    <fullName>ChangeTimeSap__c</fullName>
    <description>ChangeTimeSap</description>
    <externalDeveloperName>ChangeTimeSap</externalDeveloperName>
    <label>ChangeTimeSap</label>
    <length>6</length>
    <type>Text</type>
</CustomField>