force-app/main/default/objects/SF_SAP_DataSet__x/fields/CondPUnt__c.field-meta.xml
<CustomField>
    <fullName>CondPUnt__c</fullName>
    <description>CondPUnt</description>
    <externalDeveloperName>CondPUnt</externalDeveloperName>
    <label>CondPUnt</label>
    <length>5</length>
    <type>Text</type>
</CustomField>