force-app/main/default/objects/SF_SAP_DataSet__x/fields/CondType__c.field-meta.xml
<CustomField>
    <fullName>CondType__c</fullName>
    <description>CondType</description>
    <externalDeveloperName>CondType</externalDeveloperName>
    <label>CondType</label>
    <length>4</length>
    <type>Text</type>
</CustomField>