force-app/main/default/objects/SF_SAP_DataSet__x/fields/CondUnit__c.field-meta.xml
<CustomField>
    <fullName>CondUnit__c</fullName>
    <description>CondUnit</description>
    <externalDeveloperName>CondUnit</externalDeveloperName>
    <label>CondUnit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>