force-app/main/default/objects/SF_SAP_DataSet__x/fields/ContEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContEndDate__c</fullName>
    <description>ContEndDate</description>
    <externalDeveloperName>ContEndDate</externalDeveloperName>
    <label>ContEndDate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>