force-app/main/default/objects/SF_SAP_DataSet__x/fields/ContStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContStartDate__c</fullName>
    <description>ContStartDate</description>
    <externalDeveloperName>ContStartDate</externalDeveloperName>
    <label>ContStartDate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>