force-app/main/default/objects/SF_SAP_DataSet__x/fields/CreationDateSap__c.field-meta.xml
<CustomField>
    <fullName>CreationDateSap__c</fullName>
    <description>CreationDateSap</description>
    <externalDeveloperName>CreationDateSap</externalDeveloperName>
    <label>CreationDateSap</label>
    <length>8</length>
    <type>Text</type>
</CustomField>