force-app/main/default/objects/SF_SAP_DataSet__x/fields/CreationTimeSap__c.field-meta.xml
<CustomField>
    <fullName>CreationTimeSap__c</fullName>
    <description>CreationTimeSap</description>
    <externalDeveloperName>CreationTimeSap</externalDeveloperName>
    <label>CreationTimeSap</label>
    <length>6</length>
    <type>Text</type>
</CustomField>