force-app/main/default/objects/SF_SAP_DataSet__x/fields/CurrencyKey__c.field-meta.xml
<CustomField>
    <fullName>CurrencyKey__c</fullName>
    <description>CurrencyKey</description>
    <externalDeveloperName>CurrencyKey</externalDeveloperName>
    <label>CurrencyKey</label>
    <length>5</length>
    <type>Text</type>
</CustomField>