force-app/main/default/objects/SF_SAP_DataSet__x/fields/DealCreationDate__c.field-meta.xml
<CustomField>
    <fullName>DealCreationDate__c</fullName>
    <description>DealCreationDate</description>
    <externalDeveloperName>DealCreationDate</externalDeveloperName>
    <label>DealCreationDate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>