force-app/main/default/objects/SF_SAP_DataSet__x/fields/DealCreationTime__c.field-meta.xml
<CustomField>
    <fullName>DealCreationTime__c</fullName>
    <description>DealCreationTime</description>
    <externalDeveloperName>DealCreationTime</externalDeveloperName>
    <label>DealCreationTime</label>
    <length>6</length>
    <type>Text</type>
</CustomField>