force-app/main/default/objects/SF_SAP_DataSet__x/fields/ItemCount__c.field-meta.xml
<CustomField>
    <fullName>ItemCount__c</fullName>
    <description>ItemCount</description>
    <externalDeveloperName>ItemCount</externalDeveloperName>
    <label>ItemCount</label>
    <length>3</length>
    <type>Text</type>
</CustomField>