force-app/main/default/objects/SF_SAP_DataSet__x/fields/MaterialNo__c.field-meta.xml
<CustomField>
    <fullName>MaterialNo__c</fullName>
    <description>MaterialNo</description>
    <externalDeveloperName>MaterialNo</externalDeveloperName>
    <label>MaterialNo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>