force-app/main/default/objects/SF_SAP_DataSet__x/fields/MsgTxt__c.field-meta.xml
<CustomField>
    <fullName>MsgTxt__c</fullName>
    <description>MsgTxt</description>
    <externalDeveloperName>MsgTxt</externalDeveloperName>
    <label>MsgTxt</label>
    <length>220</length>
    <type>Text</type>
</CustomField>