force-app/main/default/objects/SF_SAP_DataSet__x/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity</description>
    <externalDeveloperName>Quantity</externalDeveloperName>
    <label>Quantity</label>
    <length>17</length>
    <type>Text</type>
</CustomField>