force-app/main/default/objects/SF_SAP_DataSet__x/fields/QuantityUom__c.field-meta.xml
<CustomField>
    <fullName>QuantityUom__c</fullName>
    <description>QuantityUom</description>
    <externalDeveloperName>QuantityUom</externalDeveloperName>
    <label>QuantityUom</label>
    <length>3</length>
    <type>Text</type>
</CustomField>