force-app/main/default/objects/SF_SAP_DataSet__x/fields/RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>RejectionReason__c</fullName>
    <description>RejectionReason</description>
    <externalDeveloperName>RejectionReason</externalDeveloperName>
    <label>RejectionReason</label>
    <length>2</length>
    <type>Text</type>
</CustomField>