force-app/main/default/objects/SF_SAP_DataSet__x/fields/SalesPrice__c.field-meta.xml
<CustomField>
    <fullName>SalesPrice__c</fullName>
    <description>SalesPrice</description>
    <externalDeveloperName>SalesPrice</externalDeveloperName>
    <label>SalesPrice</label>
    <length>18</length>
    <type>Text</type>
</CustomField>