force-app/main/default/objects/SF_SAP_DataSet__x/fields/SapMrcItemNo__c.field-meta.xml
<CustomField>
    <fullName>SapMrcItemNo__c</fullName>
    <description>SapMrcItemNo</description>
    <externalDeveloperName>SapMrcItemNo</externalDeveloperName>
    <label>SapMrcItemNo</label>
    <length>6</length>
    <type>Text</type>
</CustomField>