force-app/main/default/objects/SF_SAP_DataSet__x/fields/SapMrcNo__c.field-meta.xml
<CustomField>
    <fullName>SapMrcNo__c</fullName>
    <description>SapMrcNo</description>
    <externalDeveloperName>SapMrcNo</externalDeveloperName>
    <label>SapMrcNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>