force-app/main/default/objects/SF_SAP_DataSet__x/fields/SapSalesContNo__c.field-meta.xml
<CustomField>
    <fullName>SapSalesContNo__c</fullName>
    <description>SapSalesContNo</description>
    <externalDeveloperName>SapSalesContNo</externalDeveloperName>
    <label>SapSalesContNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>