force-app/main/default/objects/SF_SAP_DataSet__x/fields/SfHeaderShtNo__c.field-meta.xml
<CustomField>
    <fullName>SfHeaderShtNo__c</fullName>
    <description>SfHeaderShtNo</description>
    <externalDeveloperName>SfHeaderShtNo</externalDeveloperName>
    <label>SfHeaderShtNo</label>
    <length>12</length>
    <type>Text</type>
</CustomField>