force-app/main/default/objects/SF_SAP_DataSet__x/fields/SfItemShtNo__c.field-meta.xml
<CustomField>
    <fullName>SfItemShtNo__c</fullName>
    <description>SfItemShtNo</description>
    <externalDeveloperName>SfItemShtNo</externalDeveloperName>
    <label>SfItemShtNo</label>
    <length>12</length>
    <type>Text</type>
</CustomField>