force-app/main/default/objects/SF_SAP_DataSet__x/fields/TotalItems__c.field-meta.xml
<CustomField>
    <fullName>TotalItems__c</fullName>
    <description>TotalItems</description>
    <externalDeveloperName>TotalItems</externalDeveloperName>
    <label>TotalItems</label>
    <length>3</length>
    <type>Text</type>
</CustomField>